<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.4.0</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.example</groupId>
	<artifactId>multiple-auth-api</artifactId>
	<version>1.0.0</version>
	<name>Multiple Auth API</name>
	<description>Spring Boot App that focuses on implementing multiple authentication methods using OAuhth2 and JWT.</description>
	<url/>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/licenses/MIT</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Rogelio Olarte</name>
			<url>https://github.com/rogelioolarte</url>
			<email>rogelioolarte2222@gmail.com</email>
			<roles>
				<role>DEVELOPER</role>
				<role>MAINTAINER</role>
			</roles>
		</developer><developer>
			<name>Lewis Florez Renza</name>
			<url>https://github.com/gasperlf</url>
			<email>gasper_lf@hotmail.com</email>
			<roles>
				<role>ADVISOR</role>
				<role>REVIEWER</role>
			</roles>
		</developer>
	</developers>
	<scm>
		<connection>scm:git:https://github.com/rogelioolarte/multiple-auth-api.git</connection>
		<developerConnection>scm:git:ssh://github.com:rogelioolarte/multiple-auth-api.git</developerConnection>
		<url>https://github.com/rogelioolarte/multiple-auth-api</url>
		<tag>HEAD</tag>
	</scm>
	<properties>
		<java.version>21</java.version>
		<jjwt.version>0.12.6</jjwt.version>
		<spotless.version>2.44.2</spotless.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-oauth2-client</artifactId>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>${jjwt.version}</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>${jjwt.version}</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.github.cdimascio</groupId>
			<artifactId>dotenv-java</artifactId>
			<version>3.1.0</version>
		</dependency>
	</dependencies>
	<profiles>
		<!-- Profile for Unit Tests -->
		<profile>
			<id>unit-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.12</version>
					</plugin>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
								<phase>none</phase>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>

		<!-- Profile for Integration Tests -->
		<profile>
			<id>integration-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>0.8.12</version>
						<executions>
							<execution>
								<goals>
									<goal>prepare-agent</goal>
									<goal>report</goal>
								</goals>
							</execution>
							<execution>
								<id>report</id>
								<phase>verify</phase>
								<goals>
									<goal>report</goal>
								</goals>
								<configuration>
									<excludes>
										<exclude>**/DemoApplication.class</exclude>
										<exclude>**/DataServiceImpl.class</exclude>
										<exclude>**/entity/**</exclude>
										<exclude>**/model/**</exclude>
										<exclude>**/dto/**</exclude>
										<exclude>**/controller/**</exclude>
										<exclude>**/exception/**</exclude>
										<exclude>**/repository/**</exclude>
										<exclude>**/config/**</exclude>
										<exclude>**/utils/**</exclude>
									</excludes>
									<outputDirectory>${project.build.directory}/site-integration</outputDirectory>
								</configuration>
							</execution>
						</executions>
						<configuration>
							<rules>
								<rule>
									<element>PACKAGE</element>
									<limits>
										<limit>
											<counter>LINE</counter>
											<value>COVEREDRATIO</value>
											<minimum>0.80</minimum>
										</limit>
									</limits>
								</rule>
							</rules>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<path>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</path>
					</annotationProcessorPaths>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

			<!-- Spotless auto formatting -->
			<plugin>
				<groupId>com.diffplug.spotless</groupId>
				<artifactId>spotless-maven-plugin</artifactId>
				<version>2.44.3</version>
				<configuration>
					<markdown>
						<includes>
							<include>**/*.md</include>
						</includes>
						<flexmark/>
					</markdown>
					<formats>
						<format>
							<includes>
								<include>*.md</include>
								<include>*.json</include>
								<include>.gitattributes</include>
								<include>.gitignore</include>
							</includes>
							<trimTrailingWhitespace/>
							<endWithNewline/>
							<indent>
								<tabs>true</tabs>
								<spacesPerTab>4</spacesPerTab>
							</indent>
						</format>
					</formats>
					<java>
						<googleJavaFormat>
							<version>1.26.0</version>
							<style>AOSP</style>
							<reflowLongStrings>true</reflowLongStrings>
						</googleJavaFormat>
					</java>
				</configuration>
				<executions>
					<execution>
						<id>apply</id>
						<goals>
							<goal>apply</goal>
						</goals>
						<phase>compile</phase>
					</execution>
				</executions>
			</plugin>

			<!--Jacoco Plugin-->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.12</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
							<goal>report</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
						<configuration>
							<excludes>
								<exclude>**/DemoApplication.class</exclude>
								<exclude>**/DataServiceImpl.class</exclude>
								<exclude>**/entity/**</exclude>
								<exclude>**/model/**</exclude>
								<exclude>**/dto/**</exclude>
								<exclude>**/controller/**</exclude>
								<exclude>**/exception/**</exclude>
								<exclude>**/repository/**</exclude>
								<exclude>**/config/**</exclude>
								<exclude>**/utils/**</exclude>
							</excludes>
						</configuration>
					</execution>
				</executions>
				<configuration>
					<rules>
						<rule>
							<element>PACKAGE</element>
							<limits>
								<limit>
									<counter>LINE</counter>
									<value>COVEREDRATIO</value>
									<minimum>0.80</minimum>
								</limit>
							</limits>
						</rule>
					</rules>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>properties</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Maven Failsafe Plugin for Running Integration Tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>3.5.3</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<includes>
						<include>integration/**/*IT.java</include>
					</includes>
					<excludes>
						<exclude>unit/**</exclude>
					</excludes>
					<reportsDirectory>${project.build.directory}/failsafe-reports/integration</reportsDirectory>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<includes>
						<include>unit/**/*Test.java</include>
					</includes>
					<argLine>
						@{argLine}
						-javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
						-Xshare:off -XX:+EnableDynamicAgentLoading
					</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>